# fake_winreg

./: .coveragerc  .env.example  .gitignore  .rotekignore  .travis.yml  CHANGELOG.md  CHANGES.rst  CONFIG.md  CONTRIBUTING.md  DEVELOPMENT.md  INSTALL.md  Makefile  README.md  README.rst  SECURITY.md  __init__.py  build_docs.py  conftest.py  fake_winreg.ipynb  install_wine.sh  install_wine_machine.sh  install_wine_python2_preinstalled.sh  jupyter_test_lib_registry.ipynb  lib_registry.ipynb  project_conf.py  project_update.py  pyproject.toml  pytest.ini  requirements.txt  requirements_setup.txt  requirements_test.txt  reset_git_history.sh  setup.py
.docs/: README_template.rst  badges.rst  badges_project.rst  commandline_help.rst  commandline_help.txt  contribute.rst  description.rst  index.rst  installation.rst  installation_via_makefile.rst  installation_via_pypi.rst  tested_under.rst  try_in_jupyter.rst  usage.rst
.github/workflows/: default_cicd_public.yml  python-package.yml
docs/: README_template.rst  badges_project.rst  basic_usage.rst  registry_values.md
docs/adr/: 0001-memory-adapters-in-src.md
docs/systemdesign/: module_reference.md
fake_winreg/: __init__.py  __init__conf__.py  fake_reg.py  fake_reg_tools.py  fake_registry.py  fake_winreg.py  fake_winreg_cli.py  helpers.py  registry_constants.py  set_fake_registry_testvalues.py  setup_fake_registry.py  types_custom.py
lib_registry/: __init__.py  __init__conf__.py  fake_classes.py  helpers.py  lib_registry.py  lib_registry_cli.py  run_pytest3_mypy_in_a_loop.sh  types_custom.py
lib_registry/tests/: test_lib_registry.py
notebooks/: Quickstart.ipynb
src/fake_winreg/: __init__.py  __init__conf__.py  __main__.py
src/fake_winreg/adapters/: __init__.py  network.py
src/fake_winreg/adapters/cli/: __init__.py  context.py  exit_codes.py  main.py  root.py  typed_click.py
src/fake_winreg/adapters/cli/commands/: __init__.py  config.py  convert.py  demo_registries.py  info.py  logging.py  reg.py
src/fake_winreg/adapters/cli/commands/email/: __init__.py  _common.py  send_email.py  send_notification.py
src/fake_winreg/adapters/config/: defaultconfig.toml  deploy.py  display.py  loader.py  permissions.py
src/fake_winreg/adapters/config/defaultconfig.d/: 40-layered-config.toml  50-mail.toml  50-registry.toml  90-logging.toml
src/fake_winreg/adapters/email/: __init__.py  config.py  sender.py  transport.py  validation.py
src/fake_winreg/adapters/logging/: setup.py
src/fake_winreg/adapters/memory/: __init__.py  config.py  email.py
src/fake_winreg/adapters/persistence/: __init__.py  convert.py  json_backend.py  json_io.py  reg_io.py  sqlite_backend.py
src/fake_winreg/application/: __init__.py  ports.py
src/fake_winreg/composition/: __init__.py
src/fake_winreg/domain/: __init__.py  _validators.py  api.py  constants.py  errors.py  handles.py  helpers.py  memory_backend.py  registry.py  serialization.py  test_registries.py  types.py  validation.py
tests/: conftest.py  test_backend_json.py  test_backend_sqlite.py  test_cache_effectiveness.py  test_cli.py  test_cli_config.py  test_cli_core.py  test_cli_email.py  test_cli_env_file.py  test_cli_exit_codes.py  test_cli_overrides.py  test_cli_reg.py  test_cli_validation.py  test_config_overrides.py  test_convert.py  test_default_values.py  test_deploy_permissions.py  test_display.py  test_e2e_formats.py  test_enums.py  test_errors.py  test_lib_registry.py  test_logging.py  test_mail.py  test_metadata.py  test_metadata_sync.py  test_module_entry.py  test_ports.py  test_property_email.py  test_property_overrides.py  test_reg_io.py  test_registry.py  test_registry_api.py  test_set_value_ex.py
tests/local_testscripts/: lib_bash_functions.sh
travis_secrets/secrets/: CC_TEST_REPORTER_ID.secret.txt  PYPI_PASSWORD.secret.txt  pypi_password.secret.txt
