[project]
name = "fake_winreg"
version = "1.5.3"
description = "A fake Windows registry for testing registry-related code on non-Windows platforms"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich-click>=1.9.7",
    "lib_cli_exit_tools>=2.3.0",
    "lib_log_rich>=6.3.3",
    "lib_layered_config>=5.5.1",
    "btx_lib_mail>=1.3.1",
    "pydantic>=2.12.5",
    "orjson>=3.11.7",
]
license = { text = "MIT" }
authors = [{ name = "bitranox", email = "bitranox@gmail.com" }]
keywords = ["registry", "winreg", "windows", "fake", "testing", "mock", "linux"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Typing :: Typed",
  "Topic :: Software Development :: Testing",
]

# System packages required for CI runners (read by GitHub Actions workflow template)
# Format: "apt_package_name" for Ubuntu, future: {"apt": "...", "brew": "...", "choco": "..."}
[tool.ci]
system-dependencies-ubuntu = []
system-dependencies-macos = []
system-dependencies-windows-pip = []
system-dependencies-windows-choco = []
os = ["ubuntu-latest", "windows-latest", "macos-latest"]

[project.urls]
Homepage = "https://github.com/bitranox/fake_winreg"
Repository = "https://github.com/bitranox/fake_winreg.git"
Issues = "https://github.com/bitranox/fake_winreg/issues"

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2",
  "pytest-cov>=7.1.0",
  "hypothesis>=6.151.10",
  "ruff>=0.15.8",
  "pyright[nodejs]>=1.1.408",
  "bandit>=1.9.4",
  "build>=1.4.2",
  "twine>=6.2.0",
  "codecov-cli>=11.2.8",
  "pip-audit>=2.10.0",
  "textual>=8.2.1",
  "import-linter>=2.11",
  "rtoml>=0.13.0",
  "httpx>=0.28.1",
  # Transitive CVE pins
  "jaraco-context>=6.1.2",       # CVE-2025-23949
  "python-multipart>=0.0.22",    # CVE-2025-24486
  "wheel>=0.46.3",               # CVE-2025-24049
  "pynacl>=1.6.2",               # CVE-2025-69277
  "urllib3>=2.6.3",              # CVE-2025-66471, CVE-2025-66418
  "virtualenv>=21.2.0",         # CVE-2025-22702
]

[project.scripts]
fake_winreg = "fake_winreg.entry:main"
fake-winreg = "fake_winreg.entry:main"

[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fake_winreg"]
include = [
    "src/fake_winreg/py.typed",
    "src/fake_winreg/adapters/config/defaultconfig.toml",
    "src/fake_winreg/adapters/config/defaultconfig.d/*.toml",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
  "E", "W",     # pycodestyle
  "F",           # pyflakes
  "I",           # isort
  "N",           # pep8-naming
  "UP",          # pyupgrade
  "B",           # bugbear
  "A",           # builtins shadowing
  "C4",          # comprehension simplification
  "SIM",         # simplification
  "TCH",         # type-checking imports
  "RUF",         # ruff-specific
  "G",           # logging format (catches f-string in logger)
  "T20",         # print statements
  "PTH",         # pathlib preference
  "PLC", "PLE",  # pylint conventions/errors
  "S",           # flake8-bandit security checks
  "PERF",        # performance anti-patterns
  "ERA",         # eradicate dead/commented-out code
  "FBT",         # boolean trap (boolean positional args)
  "PLR",         # pylint refactor
  "PLW",         # pylint warnings
]
ignore = [
  "RUF002",    # ambiguous unicode characters in docstrings (en-dash) - typography choice
  "RUF022",    # unsorted __all__ - kept in logical grouping order
  "PLC0415",   # deferred imports inside functions - circular import prevention
  "TC001",     # stdlib imports at runtime - needed, not just for type hints
  "TC002",     # third-party imports at runtime - needed, not just for type hints
  "TC003",     # stdlib imports - same as TC001
  "TC006",     # cast() type expressions - existing code uses unquoted
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Notebooks: unused imports are often intentional for side effects
"notebooks/*.ipynb" = ["F401", "T201", "PERF203"]
# Tests: assert is standard, test fixtures have passwords, magic values are clearer inline, temp paths are fine
"tests/*.py" = ["T20", "S101", "S105", "S106", "S108", "FBT001", "FBT003", "PLR0913", "PLR2004"]
# CLI: Click framework injects boolean params; commands have many options
"src/fake_winreg/adapters/cli/**/*.py" = ["FBT001", "FBT002", "PLR0913"]
# Protocols/adapters: many-param signatures by design
"src/fake_winreg/application/*.py" = ["PLR0913"]
"src/fake_winreg/adapters/config/*.py" = ["PLR0913"]
"src/fake_winreg/adapters/email/*.py" = ["PLR0913"]
"src/fake_winreg/adapters/memory/*.py" = ["PLR0913"]
# Persistence: .reg parser complexity, winreg compat errors, many-param backend methods
"src/fake_winreg/adapters/persistence/*.py" = ["PLR0913", "PLR0915", "PLR0911", "PLR2004", "B904", "PERF401", "PERF203", "SIM105", "PLW0602", "PLW2901", "ERA001", "RUF059"]
# Domain API: PascalCase names match winreg module, `type` param matches winreg API
"src/fake_winreg/domain/api.py" = ["N802", "A002", "PLR0913", "ARG001", "PLR2004", "B904", "S101", "PLW0603"]
# Domain registry: many-param functions, perf overhead acceptable, exception chaining not needed for compat
"src/fake_winreg/domain/registry.py" = ["PLR0913", "PERF203", "B904"]
# Domain handles: global statement needed for thread-safe handle counter
"src/fake_winreg/domain/handles.py" = ["PLW0603"]
# Domain memory backend: exception chaining not needed for winreg compat
"src/fake_winreg/domain/memory_backend.py" = ["B904", "PLR0913"]
# Domain validators: magic values from Windows API spec
"src/fake_winreg/domain/_validators.py" = ["PLR2004"]

[tool.pyright]
typeCheckingMode = "strict"
extraPaths = [
  "src",
]

[tool.pytest.ini_options]
addopts = ["--doctest-modules"]
doctest_optionflags = ["ELLIPSIS", "NORMALIZE_WHITESPACE"]
pythonpath = ["src"]
markers = [
  "os_agnostic: test runs on every supported operating system",
  "os_windows: test exercises Windows-only behavior",
  "os_macos: test exercises macOS-only behavior",
  "os_posix: test exercises behavior requiring POSIX semantics",
  "os_linux: test exercises Linux-only behavior",
  "local_only: tests that require the local dev environment (external resources, script composition); skipped in CI",
  "integration: tests requiring external resources (SMTP, databases, APIs); run via 'bmk ti' or 'mktesti.sh'",
]

[tool.coverage.run]
branch = true
parallel = false
# Use a temp directory for the coverage database to avoid SQLite locking
# issues on network-mounted filesystems. The {envtmpdir} placeholder is
# not supported by coverage.py, so we use an environment variable with
# fallback to a cross-platform temp location via the pytest_configure
# hook in tests/conftest.py. CI also sets COVERAGE_FILE via workflow env.
#
# For local development, the pytest hook automatically redirects to
# tempfile.gettempdir() before pytest-cov creates its Coverage() object.
# This static fallback catches edge cases where coverage is run directly.
data_file = "/tmp/.coverage.fake_winreg"
source = ["src/fake_winreg"]

[tool.coverage.report]
omit = [
  "tests/*",
]
fail_under = 80
show_missing = true

[tool.coverage.json]
output = "coverage.json"
pretty_print = true

[tool.clean]
# Patterns to remove when running `make clean`
patterns = [
  "**/__pycache__",
  ".hypothesis",
  ".import_linter_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".pyright",
  ".mypy_cache",
  ".tox",
  ".nox",
  ".eggs",
  "*.egg-info",
  "build",
  "dist",
  "htmlcov",
  ".coverage",
  "coverage.xml",
  "codecov.sh",
  ".cache",
  "result",
  ".data_arch_violations.json",
]

[tool.git]
# Default git remote for push/release commands
default-remote = "origin"

[tool.scripts.test]
# Configuration for CI/CD test runner
pytest-verbosity = "-vv"
coverage-report-file = "coverage.xml"
src-path = "src"

[tool.importlinter]
root_package = "fake_winreg"
exclude_type_checking_imports = true

[[tool.importlinter.contracts]]
name = "Domain is pure (no adapter dependencies)"
type = "forbidden"
source_modules = [
  "fake_winreg.domain",
]
forbidden_modules = [
  "fake_winreg.adapters",
  "fake_winreg.composition",
]

[[tool.importlinter.contracts]]
name = "Clean Architecture layers"
type = "layers"
layers = [
  # Composition wires adapters - can import everything
  "fake_winreg.composition",
  # Adapters implement ports - can import application and domain
  "fake_winreg.adapters",
  # Application defines ports - can import domain
  "fake_winreg.application",
  # Domain is pure - bottom layer
  "fake_winreg.domain",
]

[tool.pip-audit]
# Known vulnerabilities to ignore (environment-level packages, not project dependencies)
# PYSEC-2022-42969: py library ReDoS — py 1.11.0 is installed in the development
#   environment but is not a dependency of this project; no fix available.
ignore-vulns = [
  "PYSEC-2022-42969",  # py 1.11.0 — ReDoS, env-only, no fix available
  "CVE-2025-8869",     # pip 24.3.1 — env-only, not a project dependency
  "CVE-2026-1703",     # pip 24.3.1 — env-only, not a project dependency
  "CVE-2026-25990",    # pillow 12.0.0 — env-only, fix in 12.1.1
]

[tool.bashate]
# bashate style settings for .sh files (E003 excluded: indent handled by shfmt)
max-line-length = 120
ignores = ["E003"]
